# src/validate/validate.schema.ts
@@ -884,6 +884,22 @@ export const chatwootSchema: JSONSchema7 = {
     import_contacts: { type: 'boolean', enum: [true, false] },
     import_messages: { type: 'boolean', enum: [true, false] },
     days_limit_import_messages: { type: 'number' },
+    auto_label: { type: 'boolean', enum: [true, false] },
+    auto_label_config: {
+      type: 'array',
+      items: {
+        type: 'object',
+        properties: {
+          regex: {
+            type: 'array',
+            items: {
+              type: 'string',
+            },
+          },
+          label: { type: 'string' },
+        },
+      },
+    },
   },
   required: ['enabled', 'account_id', 'token', 'url', 'sign_msg', 'reopen_conversation', 'conversation_pending'],
   ...isNotEmpty('account_id', 'token', 'url', 'sign_msg', 'reopen_conversation', 'conversation_pending'),
