# src/whatsapp/controllers/chatwoot.controller.ts
@@ -45,6 +45,8 @@ export class ChatwootController {
       data.import_contacts = false;
       data.import_messages = false;
       data.days_limit_import_messages = 0;
+      data.auto_label = false;
+      data.auto_label_config = [];
     }
 
     data.name_inbox = instance.instanceName;
