# src/whatsapp/dto/chatwoot.dto.ts
@@ -11,4 +11,6 @@ export class ChatwootDto {
   import_contacts?: boolean;
   import_messages?: boolean;
   days_limit_import_messages?: number;
+  auto_label?: boolean;
+  auto_label_config?: object[];
 }
