# src/whatsapp/types/wa.types.ts
@@ -66,6 +66,8 @@ export declare namespace wa {
     import_contacts?: boolean;
     import_messages?: boolean;
     days_limit_import_messages?: number;
+    auto_label?: boolean;
+    auto_label_config?: object[];
   };
 
   export type LocalSettings = {
